--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.3.0",
     "@tailwindcss/typography": "^0.5.15",
     "eslint-config-standard": "^17.1.0",
     "next": "15.0.3",
